swagger revisado e pequenos ajustes
